RESOLVED FIXED28469
We probably shouldn't be keeping the AST for eval nodes around forevar.
https://bugs.webkit.org/show_bug.cgi?id=28469
Summary We probably shouldn't be keeping the AST for eval nodes around forevar.
Gavin Barraclough
Reported 2009-08-19 12:52:39 PDT
The only barrier is the var stack.
Attachments
The Patch (5.55 KB, patch)
2009-08-19 13:16 PDT, Gavin Barraclough
no flags
Gavin Barraclough
Comment 1 2009-08-19 13:16:37 PDT
Created attachment 35135 [details] The Patch
Gavin Barraclough
Comment 2 2009-08-19 13:16:53 PDT
Sending JavaScriptCore/ChangeLog Sending JavaScriptCore/bytecode/CodeBlock.h Sending JavaScriptCore/bytecompiler/BytecodeGenerator.cpp Sending JavaScriptCore/interpreter/Interpreter.cpp Sending JavaScriptCore/parser/Nodes.h Sending JavaScriptCore/runtime/Executable.cpp Sending JavaScriptCore/runtime/Executable.h Transmitting file data ....... Committed revision 47519.
Note You need to log in before you can comment on or make changes to this bug.