 We probably shouldn't be keeping the AST for eval nodes around forevar. https://bugs.webkit.org/show_bug.cgi?id=28469

Reviewed by Darin Adler.

EvalNodes don't destroyData() (delete their parser data) since they need to hold onto
their varStack.  Copy a list of variable onto EvalCodeBlock, and this can go away.

* bytecode/CodeBlock.h:
(JSC::EvalCodeBlock::variable):
(JSC::EvalCodeBlock::numVariables):
(JSC::EvalCodeBlock::adoptVariables):
* bytecompiler/BytecodeGenerator.cpp:
(JSC::BytecodeGenerator::BytecodeGenerator):
* interpreter/Interpreter.cpp:
(JSC::Interpreter::execute):
* parser/Nodes.h:
* runtime/Executable.cpp:
(JSC::EvalExecutable::generateBytecode):
* runtime/Executable.h:



Canonical link: https://commits.webkit.org/39109@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@47519 268f45cc-cd09-0410-ab3c-d52691b4dbfc