JavaScriptCore/parser/Nodes.h
@@ -1462,13 +1462,6 @@ namespace JSC {
     public:
         static PassRefPtr<EvalNode> create(JSGlobalData*, SourceElements*, VarStack*, FunctionStack*, const SourceCode&, CodeFeatures, int numConstants);
 
-        void partialDestroyData()
-        {
-            // Eval code needs to hang on to its declaration stacks to keep declaration info alive until Interpreter::execute time,
-            // so the entire ScopeNodeData cannot be destoyed.
-            children().clear();
-        }
-
     private:
         EvalNode(JSGlobalData*, SourceElements*, VarStack*, FunctionStack*, const SourceCode&, CodeFeatures, int numConstants);
 
