JavaScriptCore/runtime/Executable.h
@@ -59,8 +59,6 @@ namespace JSC {
 
         virtual ExceptionInfo* reparseExceptionInfo(JSGlobalData*, ScopeChainNode*, CodeBlock*) = 0;
 
-        ScopeNode* astNode() { return m_node.get(); }
-
     protected:
         RefPtr<ScopeNode> m_node;
         SourceCode m_source;
@@ -108,8 +106,6 @@ namespace JSC {
                 generateBytecode(scopeChainNode);
             return *m_evalCodeBlock;
         }
-
-        DeclarationStacks::VarStack& varStack() { return m_node->varStack(); }
 
         ExceptionInfo* reparseExceptionInfo(JSGlobalData*, ScopeChainNode*, CodeBlock*);
 
